# quaternion-traits

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  rust-toolchain
src/: lib.rs  primitive.rs  quat.rs  quat_struct.rs  std_impl.rs  structs.rs  traits.rs  unit.rs
src/quat/: conversions.rs  display.rs  inputless.rs  iterator_ops.rs  math.rs  meta_manipulation.rs  relational_ops.rs  rotation_ops.rs  trigonometry.rs
src/structs/: quat_struct.rs  quaternion_formatter.rs  std_struct.rs  unit_struct.rs
src/tests/: mod.rs
src/traits/: axis.rs  core_impls.rs  dep_impls.rs  matrix.rs  quat_methods.rs
src/traits/target_arch_impls/: aarch64.rs  mod.rs  simd.rs  wasm32.rs  x86_or_x64.rs
src/unit/: inputless.rs  math.rs
tests/: main.rs  mod.rs
tests/main/: exp.rs
