[package]
name = "quaternion_traits"
version = "2.0.0"
edition = "2024"
categories = ["quaternion", "no-std"]
keywords = ["quaternion", "math", "core", "trait"]
license = "MIT OR Apache-2.0"

[dependencies]
libm = { version = "0.2.11" }
# thiserror = { version = "2.0.12" }
delegate = { version = "0.13.3" }

num-bigint = { version = "0.4", optional = true, default-features = false}
num-rational = { version = "0.4", optional = true, default-features = false}
num-integer = { version = "0.1", optional = true, default-features = false}
num-complex = { version = "0.4", optional = true, default-features = false, features = ["libm"]}
num-traits = { version = "0.2", optional = true, default-features = false, features = ["libm"]}

serde = { version = "1.0", optional = true, default-features = false}

[dev-dependencies]
no-panic = "0.1.35"

[features]
default = ["std", "full"]
std = ["alloc"]
alloc = []

full = ["trigonometry", "math_fns", "qol_fns", "rotation", "matrix", "display"]
qol_fns = []
math_fns = []
trigonometry = ["math_fns"]
rotation = ["math_fns"]
matrix = []
display = []

unstable = []

num = ["num-rational", "num-complex", "num-bigint", "num-traits"]
num-rational = ["dep:num-rational", "dep:num-integer", "dep:num-traits"]
num-complex = ["dep:num-complex", "dep:num-traits"]
num-bigint = ["dep:num-bigint", "dep:num-traits"]
num-traits = ["dep:num-traits"]

serde = ["dep:serde"]
